--- a/templates/Guest/resume.html
+++ b/templates/Guest/resume.html
@@ -6,8 +6,8 @@
 <body><a href="next"><font color="orange">Resume</font></a>
 	<a href="blog"><font color="orange">Blog</font></a>
 	<a href="gallery"><font color="orange">Gallery</font></a><br>
-	<fieldset>
-		<label>MY Resume</label><br>
+	<fieldset style="border: 1px solid blue">
+		<legend style="border: 1px solid">MY Resume</legend><br>
 		<b>Name :-</b>
 		<span>Parag Jaiswal</span><br>
 		<b>Email :-</b>
