--- a/templates/Guest/gallery.html
+++ b/templates/Guest/gallery.html
@@ -7,7 +7,7 @@
 	<a href="blog"><font color="orange">Blog</font></a>
 	<a href="gallery"><font color="orange">Gallery</font></a><br>
 	<h1>Welcome to my Gallery<h1><br>
-		<a href="https://www.google.com/search?rlz=1C1CHBD_enIN883IN883&source=univ&tbm=isch&q=mountain+photos&sa=X&ved=2ahUKEwje6pTo1cjuAhUKSX0KHarlClUQjJkEegQIAhAB&biw=1280&bih=821">Mountains</a><br>
+		<iframe src="https://www.pexels.com/search/HD%20wallpaper/" height="500" width="1000"></iframe> 
 		
 	
 
